--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.11'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.5.3'
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.39.3.0'
+
 
 }
 
